Code for Proof of concept of the yelp API

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,8 @@
   <h4>
     <a href="test">Test MongoDB</a>
     <br>
+    <a [routerLink]="['api/yelp']">POC</a>
+    <br>
     <a [routerLink]="['login']">Project</a>
   </h4>
 
