--- a/src/app/components/yelp_api_test/yelp.api.test/yelp.api.test.component.html
+++ b/src/app/components/yelp_api_test/yelp.api.test/yelp.api.test.component.html
@@ -6,7 +6,7 @@
         class="btn btn-primary btn-block">Search</button>
 
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let restaurant of result['businesses']">
+  <li class="list-group-item" *ngFor="let restaurant of restaurants">
     <a [routerLink]= "['/api/yelp', restaurant.id]">
       {{restaurant.name}}
     </a>
