--- a/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
@@ -1,51 +1,92 @@
-<ul class="nav nav-tabs nav-justified">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Orders</a></li>
-  <li role="presentation"><a href="#">Drivers</a></li>
-  <li role="presentation"><a href="#">Chefs</a></li>
-</ul>
-<form (ngSubmit) = "update()" #f="ngForm">
-  <div class="container-fluid profile clearfix">
-    <label for="username" class="label">Username</label>
-    <input type="text"
-           id="username"
-           name="username"
-           [(ngModel)]="username"
-           class="form-control" />
-
-    <label for="email" class="label">Email</label>
-    <input type="email"
-           id="email"
-           name="email"
-           [(ngModel)]="email"
-           class="form-control" />
-
-    <label for="first_name" class="label">First Name</label>
-    <input type="text"
-           id="first_name"
-           name="first_name"
-           [(ngModel)]="firstName"
-           class="form-control" />
-
-    <label for="last_name" class="label">Last Name</label>
-    <input type="text"
-           id="last_name"
-           name="last_name"
-           [(ngModel)]="lastName"
-           class="form-control" />
-
-    <label for="phone" class="label">Phone</label>
-    <input type="text"
-           id="phone"
-           name="phone"
-           [(ngModel)]="phone"
-           class="form-control" />
-    <button type="submit"
-            class="btn btn-primary form-control"
-            [disabled]="!f.valid">Update Profile</button>
-
-    <a [routerLink]= "['/login']" class="btn btn-danger btn-block">Logout</a>
+<div class="container-fluid">
+  <div *ngIf="this.restaurantId;else header">
+    <ul class="nav nav-tabs nav-justified">
+      <li role="presentation" class="active">
+        <a [routerLink]="['/restaurant/', manager.restaurantId]" class="btn">
+          My Profile
+        </a>
+      </li>
+      <li role="presentation">
+        <a [routerLink]="['/restaurant/', manager.restaurantId, 'order']" class="btn">
+          Orders
+        </a>
+      </li>
+      <li role="presentation">
+        <a [routerLink]="['/restaurant/', manager.restaurantId, 'driver']" class="btn">
+          View Drivers
+        </a>
+      </li>
+      <li role="presentation">
+        <a [routerLink]="['/restaurant/', manager.restaurantId, 'driver']" class="btn">
+          View Chefs
+        </a>
+      </li>
+    </ul>
   </div>
-</form>
-<footer>
-</footer>
+  <ng-template #header>
+    <header>
+      <a [routerLink]="['/admin/manager']" class="white"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    </header>
+    <ul class="nav nav-tabs nav-justified">
+      <li role="presentation">
+        <a [routerLink]="['/admin/restaurant/', manager.restaurantId, 'driver']" class="btn">
+          View Drivers
+        </a>
+      </li>
+      <li role="presentation">
+        <a [routerLink]="['/admin/restaurant/', manager.restaurantId, 'chef']" class="btn">
+          View Chefs
+        </a>
+      </li>
+    </ul>
+  </ng-template>
+  <h3 class="text-center">Edit Manager of Restaurant {{manager.restaurantId}}</h3>
+  <form (ngSubmit) = "update()" #f="ngForm">
+    <div class="container-fluid profile clearfix">
+      <label for="username" class="label">Username</label>
+      <input type="text"
+             id="username"
+             name="username"
+             [(ngModel)]="username"
+             class="form-control" />
+
+      <label for="email" class="label">Email</label>
+      <input type="email"
+             id="email"
+             name="email"
+             [(ngModel)]="email"
+             class="form-control" />
+
+      <label for="first_name" class="label">First Name</label>
+      <input type="text"
+             id="first_name"
+             name="first_name"
+             [(ngModel)]="firstName"
+             class="form-control" />
+
+      <label for="last_name" class="label">Last Name</label>
+      <input type="text"
+             id="last_name"
+             name="last_name"
+             [(ngModel)]="lastName"
+             class="form-control" />
+
+      <label for="phone" class="label">Phone</label>
+      <input type="text"
+             id="phone"
+             name="phone"
+             [(ngModel)]="phone"
+             class="form-control" />
+      <div *ngIf="!this.restaurantId">
+        <label for="active" class="label">Active?</label>
+        <input type="checkbox"
+               id="active"
+               name="active"
+               [(ngModel)]="active">
+      </div>
+      <button type="submit"
+              class="btn btn-primary form-control"
+              [disabled]="!f.valid">Update Profile</button>
+    </div>
+  </form>
+</div>
