--- a/src/app/components/yelp_api_test/yelp.api.detail/yelp.api.detail.component.html
+++ b/src/app/components/yelp_api_test/yelp.api.detail/yelp.api.detail.component.html
@@ -6,5 +6,7 @@
 
 <h1> ratings : {{ratings}}</h1>
 
+<a [routerLink]= "['/manager/restaurant/', yelpId, '/menu']" class="btn btn-success btn-block">Register</a>
+
 
 
