--- a/src/app/components/menu/menu-list/menu-list.component.html
+++ b/src/app/components/menu/menu-list/menu-list.component.html
@@ -15,6 +15,8 @@
 
 <div class="container-fluid page-margin">
   <div class="row">
+    <button [routerLink]="['/manager', 'restaurant', restaurantId, 'menu', menuId]" class="btn btn-primary btn-block"
+    >Edit</button>
     <label class="">Delivery Charge</label>
     <input class="form-control"
            type="text"
@@ -29,23 +31,39 @@
            [(ngModel)] = "orderLimit"
            placeholder="Minimum order limit"
            name="orderLimit"/>
-    <button [routerLink]="['/manager', 'restaurant', restaurantId, 'menu', menuId]" class="btn btn-primary btn-block"
-            >Edit</button>
   </div>
 </div>
 
 <div class="container-fluid">
-  <a>
-    <span [routerLink]="['/manager', 'restaurant', restaurantId, 'menu', menuId, 'menuItem', 'new']"
-          class="glyphicon glyphicon-plus pull-right"></span>
-  </a>
+  <label class="">Menu Items</label>
   <ul class="list-group">
+    <li class="list-group-item active">
+      <div class="row">
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          Name
+        </div>
+        <div class="col-md-3 hidden-sm hidden-xs">
+          Price
+        </div>
+        <div class="col-sm-3 col-md-3 hidden-xs">
+          Category
+        </div>
+      </div>
+    </li>
     <li class="list-group-item" *ngFor="let item of menuItems">
-      <a>
-        {{item['name']}}
-      </a>
-      <a>
-        <span class="glyphicon glyphicon-cog pull-right"></span>
-      </a>
+      <div class="row">
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          <a>
+          {{item['name']}}
+          </a>
+        </div>
+        <div class="col-md-3 hidden-sm hidden-xs">
+          {{item['price']}}
+        </div>
+        <div class="col-sm-3 col-md-3 hidden-xs">
+          {{item['category']}}
+        </div>
+      </div>
+    </li>
   </ul>
 </div>
