--- a/src/app/components/menu/menu-new/menu-new.component.html
+++ b/src/app/components/menu/menu-new/menu-new.component.html
@@ -10,23 +10,10 @@
     <!--heading on the nav bar-->
     <p class="navbar-header pull-left page-new-top-glyp-margin">
       <a class="navbar-brand thick">
-        <b>Menu</b>
-      </a>
-    </p>
-
-    <p class="navbar-text pull-right page-new-top-glyp-margin">
-      <a (click)="AddMenu()"
-         class="navbar-link">
-        <span class="glyphicon glyphicon-ok"></span>
+        <b>Add new Menu</b>
       </a>
     </p>
   </nav>
-
-
-  <div *ngIf="error"
-       class="alert alert-danger margin-top-huge">
-    {{error}}
-  </div>
 
   <div class="container-fluid page-margin">
     <div class="row">
@@ -44,21 +31,11 @@
              [(ngModel)] = "orderLimit"
              placeholder="Minimum order limit"
              name="orderLimit"/>
+      <button [routerLink]="['/manager', 'restaurant', this.restaurantId]"
+              type="submit"
+              class="btn btn-primary btn-block">
+        Done
+      </button>
     </div>
   </div>
 </form>
-
-<div class="container-fluid">
-  <a>
-    <span class="glyphicon glyphicon-plus pull-right"></span>
-  </a>
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of menuItems">
-      <a>
-        {{item['name']}}
-      </a>
-      <a>
-        <span class="glyphicon glyphicon-cog pull-right"></span>
-      </a>
-  </ul>
-</div>
