--- a/src/app/components/menuItem/menu-item-new/menu-item-new.component.html
+++ b/src/app/components/menuItem/menu-item-new/menu-item-new.component.html
@@ -2,7 +2,7 @@
 
   <nav class="navbar sadaab-navbar-color navbar-default navbar-fixed-top nav-collapse collapsing" style="height:60px">
     <p class="navbar-text pull-left page-new-top-glyp-margin">
-      <a [routerLink]="['/manager', 'restaurant', restaurantId ]" class="navbar-link">
+      <a [routerLink]="['/manager', 'restaurant', restaurantId, 'menu', menuId ]" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -54,7 +54,7 @@
                 required
                 placeholder="Menu Item Description"
                 [(ngModel)] = "description"></textarea>
-      <button (click)="createMenuItem()" class="btn btn-primary btn-block"
+      <button class="btn btn-primary btn-block"
       >Add new menu Item</button>
     </div>
   </div>
