--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -30,5 +30,13 @@
             [disabled]="!f.valid">Login</button>
 
     <a [routerLink]= "['/register']" class="btn btn-success btn-block">Register</a>
+    <a href="http://localhost:3000/auth/facebook" class="btn btn-primary btn-block">
+    <span class="fa fa-facebook"></span>
+    Login with Facebook
+    </a>
+    <!--<a href="https://food-spot.herokuapp.com/auth/facebook" class="btn btn-primary btn-block">-->
+      <!--<span class="fa fa-facebook"></span>-->
+      <!--Facebook-->
+    <!--</a>-->
   </form>
 </div>
