--- a/src/app/components/manager/manager-register/manager-register.component.html
+++ b/src/app/components/manager/manager-register/manager-register.component.html
@@ -3,8 +3,17 @@
     There is an error! Please try again later.
   </div>
   <div class="thanks" *ngIf="this.success">
-    <h4>Thanks for claiming the Restaurant.</h4>
-    <p>You should be able to manage the restaurant as soon as this request is approved.</p>
+    <h1 class="text-center text-success">Thanks for claiming the Restaurant.</h1>
+    <div class="text-center">
+      <span class="glyphicon glyphicon-ok-sign registration-success"></span>
+    </div>
+    <p class="info text-center">You should be able to manage the restaurant as soon as this request is approved.</p>
+    <a [routerLink]= "['/']"
+       class="btn btn-primary btn-block">
+      Homepage
+      <span class="glyphicon glyphicon-arrow-right"></span>
+    </a>
+
   </div>
   <div *ngIf="!this.success">
     <h1>Register</h1>
